scss refactoring and ShowListData function created for adding project,achievement,skill,education,experience input values to Blank cv design

--- a/resume.html
+++ b/resume.html
@@ -30,7 +30,7 @@
     <header class="cv-form-header">
       <div class="container">
         <div class="header-container">
-          <h1 class="title text-uppercase">cv-form</h1>
+          <h1 class="title text-uppercase">Create CV</h1>
         </div>
       </div>
     </header>
@@ -88,9 +88,10 @@
                       type="file"
                       class="form-control image"
                       id=""
-                      onkeyup="generateCV()"
                       placeholder="Image"
                       name="image"
+                      accept="image/*"
+                      onchange="previewImage()"
                     />
                     <span class="form-text"></span>
                   </div>
