section three is added to the index page

--- a/index.html
+++ b/index.html
@@ -76,9 +76,7 @@
                 >create my resume</a
               >
               <div class="modal">
-                <a
-                  class="btn btn-secondary text-uppercase"
-                  id="watch-btn"
+                <a class="btn btn-secondary text-uppercase" id="watch-btn"
                   >watch tutorial</a
                 >
                 <div class="modal-container">
@@ -88,6 +86,43 @@
                   <video src="./assets/images/cv-tutorial.mp4" controls></video>
                 </div>
               </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="section-three bg-blue-shade">
+      <div class="container">
+        <div class="section-three-content">
+          <div class="section-three-l">
+            <span class="left-label text-uppercase"
+              >Start building your career</span
+            >
+            <h2 class="left-title">
+              Professional resumes for effective job interviews
+            </h2>
+            <p class="left-description text-white">
+              A great job application leads to a good interview. An amazing
+              resume is what makes it all possible. Start off strong with the
+              hiring manager by creating a positive professional image. A job
+              interview can be much easier if they have a favorable view of your
+              resume and cover letter.
+            </p>
+            <div class="btn-group">
+              <a href="./resume.html" class="btn btn-primary text-uppercase"
+                >Get Started Now</a
+              >
+            </div>
+          </div>
+          <div class="section-three-r">
+            <div class="resume-img-one">
+              <img src="./assets/images/madrid-resume-templates.jpg" alt="" />
+            </div>
+            <div class="resume-img-two">
+              <img src="./assets/images/berlin-resume-templates-jpg.jpg" alt="" />
+            </div>
+            <div class="resume-img-three">
+              <img src="./assets/images/santiago-resume-templates-jpg.jpg" alt="" />
             </div>
           </div>
         </div>
