--- a/resume.html
+++ b/resume.html
@@ -30,7 +30,7 @@
     <header class="cv-form-header">
       <div class="container">
         <div class="header-container">
-          <h1 class="title text-uppercase">Create CV</h1>
+          <h1 class="title text-uppercase">Create Resume</h1>
         </div>
       </div>
     </header>
