navbar sticky scroll id added

--- a/resume.html
+++ b/resume.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Resume Build Page</title>
+    <!-- favicon image -->
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="./assets/images/curriculum-vitae.png"
+    />
     <!-- custom css file -->
     <link rel="stylesheet" href="./assets/StyleSheet/main.css" />
   </head>
@@ -687,7 +693,11 @@
     </section>
     <section class="print-btn-section">
       <div class="container">
-        <button type="button" class="print-btn btn btn-primary" onclick="printCV()">
+        <button
+          type="button"
+          class="print-btn btn btn-primary"
+          onclick="printCV()"
+        >
           Print CV
         </button>
       </div>
@@ -718,6 +728,6 @@
     <!-- jquery repeater cdn -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.repeater/1.2.1/jquery.repeater.min.js"></script>
     <!-- app js-->
-    <script src="./assets/JavaScript/app.js"></script>
+    <script defer src="./assets/JavaScript/app.js"></script>
   </body>
 </html>
